change log

### 16.02.2017
- funny enough, there was a date error in the last changelog entry
- removed hamiltonian eigenvalue decomposition from config, since it will be needed from now on
- density matrix will only be allocated when needed (better memory usage, since eigenvectors have to be stored at some point)
- added eigenvector decomposition

### 15.02.2017
- removed expectation value of transition... not needed at this point and it was only work in progress
- changed ini file creation to copy from default config.ini
- added hamiltonian eigenvalue decomposition as parameter and save txt file in data folder now
- changed plot to use new destination of hamiltonian eigenvalues
- added latex support in entPlot
- added size parameters for plot in config.ini
- arbitrary orders of time evolution now possible
- total entropy and energy only calculated 100 times now
- changed entplot accordingly
- NO BACKWADS COMPATIBILITY FOR THIS!!!
- changed typo in changelog 01.02.2017
- changed data storage to %.16e for almost everything!

### 01.02.2017
- added running average and total average and fluctuations... nice stuff though

### 26.01.2017
- changed entPlot to only plot total entropy if calculated

### 24.01.2017
- still no progress in transition element expectation value (frozen for now!!!)
- changed hamiltonian and all the quartic and quadratic matrices to sparse ones <--- important

### 20.01.2017
- added expectation value of transition elements
- corrected typo in 14.01.2017 changelog
- note that the quadratic operators are now stored in the mpSystem class
- Work in progress!!!

### 16.01.2017
- finally changed the initial state part to a working one
- changed time evolution to be calculated only by datapoint evaluation, so instead of doing all the time steps,
	raise the time evolution matrix at the beginning to the power of timesteps between datapoints and just do it ONCE betwen every datapoint - might be inaccurate!
- added energy to plotting as well
