@@ -5,7 +5,7 @@ kred = 2,3
 
 [iteration]
 deltaT = 1e-5
-steps = 4e6
+steps = 6e6
 
 [filemanagement]
 datapoints = 1e3
@@ -25,15 +25,15 @@ totalenergy = True
 [plotbools]
 plotdata = True
 plotavgs = True
-plothamiltonian = True
+plothamiltonian = False
 plotdens = False
 plotdensred = False
 
 [plotvals]
 dmstepsize = 1
 dmfps = 5
-fontsize = 17
-legendsize = 16
+fontsize = 16
+legendsize = 15
 avg_frame = 501
 avg_order = 1
 timescale = 0.5
